# pidog

./: .gitignore  CLAUDE.md  DESCRIPTION.rst  README.md  extract_docs.py  i2samp.sh  pyproject.toml  setup.py
basic_examples/: 10_imu_read.py  11_sound_direction_read.py  12_dual_touch_read.py  13_camera_easy_use.py  1_pidog_init.py  2_legs_control.py  3_head_control.py  4_tail_control.py  5_stop_actions.py  6_do_preset_actions.py  7_sound_effect.py  8_ultrasonic_read.py  9_rgb_control.py
docs/: INDEX.md  README.md  requirements.txt
examples/: 0_calibration.py  0_calibration2.py  0_calibration_old.py  0_keyboard_control.py  10_balance.py  10_keyboard_control.py  11_keyboard_control.py  12_app_control.py  13_ball_track.py  14_voice_active_dog_doubao_cn.py  14_voice_active_dog_gpt.py  14_voice_active_dog_ollama.py  14_voice_active_dog_ollama_with_image.py  14_voice_interact_gpt.py  18.online_llm_test.py  19_voice_active_dog_ollama.py  1_action_demonstration.py  1_wake_up.py  20_voice_active_dog_doubao_cn.py  20_voice_active_dog_gpt.py  2_action_demonstration.py  2_function_demonstration.py  2_wake_up.py  3_patrol.py  4_response.py  5_rest.py  6_be_picked_up.py  7_face_track.py  8_pushup.py  9_howling.py  app_control.py  curses_utils.py  custom_actions.py  custom_pose.py  preset_actions.py  servo_zeroing.py  voice_active_dog.py  voice_assistant.py  web_control.py
gait_test/: awesome_print.py  backward_final.py  imu_test.py  keyboard_move.py  new_cali.py  new_walk.py  new_walk2.py  new_walk3.py  new_walk4.py  new_walk5.py  pose_keyboard_control.py  public_functions.py  (+5 more)
(+232 files in other folders)
